changed scope of services and controllers to prototype